mod_expires: Don't report an Internal Server error if ExpiresDefault is used and has not been set in the httpd.conf file. PR: 23748, 24459

Submitted: Liam Quinn  <liam htmlhelp.com>
Reviewed: Paul J. Reder


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@101839 13f79535-47bb-0310-9956-ffa450edef68